<resources>
    <string name="app_name">UNZIP FILE</string>
    <string name="_1_99">1.99 $</string>
    <string name="_3_99">3.99 $</string>
    <string name="_50_off">50 % OFF</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="action_settings">Settings</string>
    <string name="after">AFTER</string>
    <string name="all_audio_file">All Audio File</string>
    <string name="all_audio_nfile">All Audio File</string>
    <string name="all_compressed_files">All Compressed Files</string>
    <string name="all_compressed_n_files">All Compressed Files</string>
    <string name="all_document_files">All Document Files</string>
    <string name="all_document_nfiles">All Document Files</string>
    <string name="all_extracted_files">All Extracted Files</string>
    <string name="all_extracted_nfiles">All Extracted Files</string>
    <string name="all_files_compressed">File is Successfully Compressed.</string>
    <string name="all_folder_amp_nfiles">All Folder &amp; Files</string>
    <string name="all_image_file">All Image File</string>
    <string name="all_image_nfile">All Image File</string>
    <string name="all_pdf_nfile">All PDF File</string>
    <string name="all_video_file">All Video File</string>
    <string name="all_video_nfile">All Video File</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="arabic">Arabic</string>
    <string name="are_you_sure">Are you sure, you want to Exit?</string>
    <string name="before">BEFORE</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="buy">BUY</string>
    <string name="change">change</string>
    <string name="change_language">Change Language</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="compress_7z">.7z</string>
    <string name="compress_gzip">.gzip</string>
    <string name="compress_tar_gz">.tar.gz</string>
    <string name="compress_zip">.zip</string>
    <string name="compression_format">Compression Format</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Delete File</string>
    <string name="deletesure">Are you sure you want to delete these files?</string>
    <string name="do_you_want_to_override_this_file">Do You want to Override this file ?</string>
    <string name="done">DONE</string>
    <string name="english">English</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="extract_file">Extract File</string>
    <string name="extracted">File is Successfully Extracted.</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="file_extracted">File is Successfully Extracted.</string>
    <string name="file_name_already_exist">File name already exist</string>
    <string name="folder_cant_extract">Folder Can Not Be Extracted!</string>
    <string name="french">French</string>
    <string name="german">German</string>
    <string name="get_this_economy_offer_to_remove_ads_from_files_archiver_and_enable_its_advance_feature">Get this Economy offer to remove Ads from Unzip File and enable its advance feature</string>
    <string name="gzip"> .GZIP Compression Enable</string>
    <string name="help">Help</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="home">Home</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="items">%d items</string>
    <string name="masg">We are trying to make our app better! Please take few seconds to Rate this app.</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_choose_label">Choose</string>
    <string name="md_custom_label">Custom</string>
    <string name="md_done_label">Done</string>
    <string name="md_error_label">Error</string>
    <string name="md_presets_label">Presets</string>
    <string name="md_storage_perm_error">Your app has not been granted the READ_EXTERNAL_STORAGE permission.</string>
    <string name="msg_ret_command">Command line error</string>
    <string name="msg_ret_fault">Fatal error</string>
    <string name="msg_ret_memmory">Not enough memory for operation</string>
    <string name="msg_ret_success">Success</string>
    <string name="msg_ret_user_stop">User stopped the process</string>
    <string name="msg_ret_warning">Warning (Non fatal error(s))</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select a Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select a Date Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_folder">New Folder</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="open_file">Open File</string>
    <string name="open_folder">Open Folder</string>
    <string name="override">Override</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="permission_string_btn">Setting</string>
    <string name="persian">Persian</string>
    <string name="portuguese">Portuguese</string>
    <string name="premium_package">Premium Package</string>
    <string name="pro">PRO</string>
    <string name="progress_message">Please wait, your request is processing.</string>
    <string name="progress_title">Message</string>
    <string name="purchase">PURCHASE</string>
    <string name="rate">Rate Us</string>
    <string name="rational_permission_proceed">proceed</string>
    <string name="remove_ads_enable"> Ads Remove Enable</string>
    <string name="rename">Rename File</string>
    <string name="russian">Russian</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="select_language">Select Language</string>
    <string name="spanish">Spanish</string>
</resources>