<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_300sdp"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/abov"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_ad"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/ic_close_ad" />

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/gif"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_90sdp"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:background="@drawable/animation_gif" />

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/no_ads" />
            </RelativeLayout>

            <TextView
                android:id="@+id/fiftyoff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/abov"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_5sdp"
                android:text="@string/_50_off"
                android:textColor="#ffd71e2a"
                android:textSize="@dimen/_25sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/texts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fiftyoff"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/_5sdp"
                android:gravity="center"
                android:text="@string/get_this_economy_offer_to_remove_ads_from_files_archiver_and_enable_its_advance_feature"
                android:textColor="@color/black"
                android:textSize="@dimen/_17sdp" />

            <LinearLayout
                android:id="@+id/befor_after"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_70sdp"
                android:layout_below="@+id/texts"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/before"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/before"
                            android:textColor="#ffe6171e"
                            android:textSize="@dimen/_16sdp" />

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/before"
                            android:layout_centerHorizontal="true">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/_3_99"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_16sdp" />

                            <View
                                android:layout_width="@dimen/_45sdp"
                                android:layout_height="@dimen/_1sdp"
                                android:layout_centerInParent="true"
                                android:background="@color/black" />
                        </RelativeLayout>
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/after"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="@string/after"
                            android:textColor="#ff2fb95d"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/after"
                            android:layout_centerHorizontal="true"
                            android:text="@string/_1_99"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />
                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/buy_purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/befor_after">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:background="@drawable/buy_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/buy"
                    android:textColor="#ffffffff"
                    android:textSize="@dimen/_20sdp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
